--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.4.1",
     "@iconify/react": "^6.0.2",
     "@next/eslint-plugin-next": "15.5.9",
     "@react-types/shared": "3.32.1",
